tests/paczka1/fuzzy1/34569825.err
Error in line 1: 5SKf S299 96,3
Error in line 3: 0Q3r32 S299 87,78
Error in line 10: AcAh7rD7 S299 44,5
Error in line 9: UGwf S299 45,5
Error in line 23: qS0b06 S47 5,1
Error in line 22: AcAh7rD7 S698 96,2
Error in line 28: A57 S698 43,8
